# bridge-heysummit-wp

./: .wp-env.json  CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  README.md  SECURITY.md  composer.json  emailexpert-events.php  phpunit.xml.dist  pyproject.toml  requirements.txt  uninstall.php
.github/workflows/: plugin-ci.yml  weekly-news-report.yml
assets/css/: eex-admin.css  eex.css
assets/js/: eex-admin.js  eex-time.js
blocks/: editor.js
config/: watchers.example.yml  watchers.yml
docs/: api-notes.md  decisions.md  progress.md
emailexpert-events/: .gitignore  .wp-env.json  README.md  composer.json  package.json  phpcs.xml.dist
emailexpert-events/blocks/: editor.js
emailexpert-events/docs/: acceptance-report.md  api-notes.md  decisions.md  progress.md
emailexpert-events/src/: Autoloader.php  Options.php  Plugin.php  RateLimiter.php  Registrations.php
emailexpert-events/templates/: archive-eex_event.php  archive-eex_talk.php  single-eex_event.php  single-eex_speaker.php  single-eex_sponsor.php  single-eex_talk.php  taxonomy-eex_category.php
emailexpert-events/tests/: TestCase.php  bootstrap.php  wc-stubs.php  wp-stubs.php
emailexpert_news_agent/: classify.py  cli.py  config.py  db.py  extract.py  fetch.py  ingest.py  report.py  scoring.py  utils.py
src/: Options.php  Plugin.php
src/Accounts/: AdminUi.php  Backfill.php  Consent.php  Module.php  Pusher.php  Rules.php  Suppression.php
src/Admin/: AdminAssets.php  Ajax.php  (+6 more)
templates/: archive-eex_speaker.php  taxonomy-eex_event_series.php
tests/: TestCase.php  bootstrap.php  wp-stubs.php
(+214 files in other folders)
